# OScolloquium

./: CMakeLists.txt  HTTPServer.cpp  HTTPServer.hpp  Task.cpp  Task.hpp  TaskManager.cpp  TaskManager.hpp  main.cpp  router.hpp
